--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@prisma/client": "^5.17.0",
     "app-root-path": "^3.1.0",
     "argon2": "^0.40.3",
+    "axios": "^1.7.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.12",
     "fs-extra": "^11.2.0",
     "passport": "^0.7.0",
